tracking-issue: bring shipit back

--- a/internal/cmd/tracking-issue/testdata/issue-25768.md
+++ b/internal/cmd/tracking-issue/testdata/issue-25768.md
@@ -16,7 +16,7 @@ This is a tracking issue for [RFC 496](https://docs.google.com/document/d/1fknr3
 - [ ] https://github.com/sourcegraph/sourcegraph/issues/26101 
 
 Completed
-- [x] (🏁 31 days ago) https://github.com/sourcegraph/sourcegraph/issues/26098 
+- [x] (🏁 50 days ago) https://github.com/sourcegraph/sourcegraph/issues/26098 
 <!-- END ASSIGNEE -->
 
 <!-- BEGIN ASSIGNEE: bobheadxi -->
@@ -24,9 +24,9 @@ Completed
 
 
 Completed
-- [x] (🏁 63 days ago) https://github.com/sourcegraph/sourcegraph/pull/25749 
-- [x] (🏁 62 days ago) https://github.com/sourcegraph/sourcegraph/pull/25810 
-- [x] (🏁 58 days ago) https://github.com/sourcegraph/sourcegraph/pull/25835 
+- [x] (🏁 82 days ago) https://github.com/sourcegraph/sourcegraph/pull/25749 :shipit:
+- [x] (🏁 81 days ago) https://github.com/sourcegraph/sourcegraph/pull/25810 :shipit:
+- [x] (🏁 77 days ago) https://github.com/sourcegraph/sourcegraph/pull/25835 :shipit:
 <!-- END ASSIGNEE -->
 
 <!-- BEGIN ASSIGNEE: davejrt -->
@@ -41,7 +41,7 @@ Completed
 - [ ] https://github.com/sourcegraph/sourcegraph/issues/26118 
 
 Completed
-- [x] (🏁 59 days ago) https://github.com/sourcegraph/sourcegraph/pull/25892 
-- [x] (🏁 42 days ago) https://github.com/sourcegraph/sourcegraph/issues/25562 (PRs: ~[#25835](https://github.com/sourcegraph/sourcegraph/pull/25835)~)
+- [x] (🏁 78 days ago) https://github.com/sourcegraph/sourcegraph/pull/25892 :shipit:
+- [x] (🏁 61 days ago) https://github.com/sourcegraph/sourcegraph/issues/25562 (PRs: ~[#25835](https://github.com/sourcegraph/sourcegraph/pull/25835)~)
 <!-- END ASSIGNEE -->
 <!-- END WORK -->
