--- a/internal/cmd/tracking-issue/testdata/issue-13987.md
+++ b/internal/cmd/tracking-issue/testdata/issue-13987.md
@@ -22,11 +22,11 @@ Period is from 2020-09-20 to 2020-10-20. Please write the days you won't be work
 @unassigned
 
 - [ ] https://github.com/sourcegraph/sourcegraph/issues/26230 
-  - [x] (🏁 195 days ago) https://github.com/sourcegraph/sourcegraph/issues/12501    🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+  - [x] (🏁 213 days ago) https://github.com/sourcegraph/sourcegraph/issues/12501    🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
 
 Completed
-- [x] (🏁 422 days ago) https://github.com/sourcegraph/sourcegraph/issues/14608 (PRs: ~[#14637](https://github.com/sourcegraph/sourcegraph/pull/14637)~) 🧶   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 195 days ago) https://github.com/sourcegraph/sourcegraph/issues/12501    🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 441 days ago) https://github.com/sourcegraph/sourcegraph/issues/14608 (PRs: ~[#14637](https://github.com/sourcegraph/sourcegraph/pull/14637)~) 🧶   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 213 days ago) https://github.com/sourcegraph/sourcegraph/issues/12501    🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
 <!-- END ASSIGNEE -->
 
 <!-- BEGIN ASSIGNEE: Strum355 -->
@@ -34,33 +34,33 @@ Completed
 
 
 Completed
-- [x] (🏁 442 days ago) https://github.com/sourcegraph/sourcegraph/issues/14057  🕵️   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 422 days ago) https://github.com/sourcegraph/sourcegraph/issues/14486 (PRs: ~[#14581](https://github.com/sourcegraph/sourcegraph/pull/14581)~)   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 205 days ago) https://github.com/sourcegraph/sourcegraph/issues/3418    🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 460 days ago) https://github.com/sourcegraph/sourcegraph/issues/14057  🕵️   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 441 days ago) https://github.com/sourcegraph/sourcegraph/issues/14486 (PRs: ~[#14581](https://github.com/sourcegraph/sourcegraph/pull/14581)~)   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 224 days ago) https://github.com/sourcegraph/sourcegraph/issues/3418    🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
 <!-- END ASSIGNEE -->
 
 <!-- BEGIN ASSIGNEE: aidaeology -->
 @aidaeology: __1.00d__
 
 - [ ] https://github.com/sourcegraph/sourcegraph/issues/26230  __0.50d__
-  - [x] (🏁 437 days ago) https://github.com/sourcegraph/sourcegraph/issues/14224  __0.50d__   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+  - [x] (🏁 456 days ago) https://github.com/sourcegraph/sourcegraph/issues/14224  __0.50d__   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
 
 Completed: __1.00d__
-- [x] (🏁 441 days ago) https://github.com/sourcegraph/about/pull/1628 
-- [x] (🏁 437 days ago) https://github.com/sourcegraph/sourcegraph/issues/14224  __0.50d__   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 419 days ago) https://github.com/sourcegraph/sourcegraph/issues/13200  __0.50d__ 🐛   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 190 days ago) https://github.com/sourcegraph/sourcegraph/pull/14257 🧶
+- [x] (🏁 460 days ago) https://github.com/sourcegraph/about/pull/1628 :shipit:
+- [x] (🏁 456 days ago) https://github.com/sourcegraph/sourcegraph/issues/14224  __0.50d__   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 438 days ago) https://github.com/sourcegraph/sourcegraph/issues/13200  __0.50d__ 🐛   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 209 days ago) https://github.com/sourcegraph/sourcegraph/pull/14257 :shipit:🧶
 <!-- END ASSIGNEE -->
 
 <!-- BEGIN ASSIGNEE: beyang -->
 @beyang: __4.00d__
 
 - [ ] https://github.com/sourcegraph/sourcegraph/issues/26230 
-  - [x] (🏁 437 days ago) https://github.com/sourcegraph/sourcegraph/pull/14211 
+  - [x] (🏁 456 days ago) https://github.com/sourcegraph/sourcegraph/pull/14211 :shipit:
 
 Completed: __4.00d__
-- [x] (🏁 437 days ago) https://github.com/sourcegraph/sourcegraph/pull/14211 
-- [x] (🏁 241 days ago) https://github.com/sourcegraph/sourcegraph/issues/12349  __4.00d__   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 456 days ago) https://github.com/sourcegraph/sourcegraph/pull/14211 :shipit:
+- [x] (🏁 260 days ago) https://github.com/sourcegraph/sourcegraph/issues/12349  __4.00d__   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
 <!-- END ASSIGNEE -->
 
 <!-- BEGIN ASSIGNEE: efritz -->
@@ -68,37 +68,37 @@ Completed: __4.00d__
 
 
 Completed: __6.00d__
-- [x] (🏁 444 days ago) https://github.com/sourcegraph/sourcegraph/issues/12930  🐛   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 444 days ago) https://github.com/sourcegraph/sourcegraph/issues/13957 (PRs: ~[#14005](https://github.com/sourcegraph/sourcegraph/pull/14005)~) __0.50d__   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 443 days ago) https://github.com/sourcegraph/sourcegraph/issues/14008    🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 443 days ago) https://github.com/sourcegraph/sourcegraph/pull/14035 
-- [x] (🏁 442 days ago) https://github.com/sourcegraph/sourcegraph/pull/14060 
-- [x] (🏁 441 days ago) https://github.com/sourcegraph/sourcegraph/issues/14044 (PRs: ~[#14061](https://github.com/sourcegraph/sourcegraph/pull/14061)~, ~[#14063](https://github.com/sourcegraph/sourcegraph/pull/14063)~)   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 441 days ago) https://github.com/sourcegraph/sourcegraph/pull/14124 
-- [x] (🏁 434 days ago) https://github.com/sourcegraph/sourcegraph/issues/14052 (PRs: ~[#14141](https://github.com/sourcegraph/sourcegraph/pull/14141)~) 🐛   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 434 days ago) https://github.com/sourcegraph/sourcegraph/pull/14344 
-- [x] (🏁 434 days ago) https://github.com/sourcegraph/sourcegraph/pull/14142 
-- [x] (🏁 433 days ago) https://github.com/sourcegraph/sourcegraph/pull/14353 
-- [x] (🏁 433 days ago) https://github.com/sourcegraph/sourcegraph/pull/14355 
-- [x] (🏁 433 days ago) https://github.com/sourcegraph/sourcegraph/pull/14358 
-- [x] (🏁 433 days ago) https://github.com/sourcegraph/sourcegraph/issues/14264    🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 429 days ago) https://github.com/sourcegraph/sourcegraph/pull/14428 
-- [x] (🏁 428 days ago) https://github.com/sourcegraph/sourcegraph/issues/14467 (PRs: ~[#14469](https://github.com/sourcegraph/sourcegraph/pull/14469)~)   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 427 days ago) https://github.com/sourcegraph/sourcegraph/pull/14491 
-- [x] (🏁 422 days ago) https://github.com/sourcegraph/sourcegraph/issues/14486 (PRs: ~[#14581](https://github.com/sourcegraph/sourcegraph/pull/14581)~)   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 422 days ago) https://github.com/sourcegraph/sourcegraph/pull/14648 
-- [x] (🏁 422 days ago) https://github.com/sourcegraph/sourcegraph/pull/14633 
-- [x] (🏁 422 days ago) https://github.com/sourcegraph/sourcegraph/pull/14637 
-- [x] (🏁 422 days ago) https://github.com/sourcegraph/sourcegraph/pull/14624 
-- [x] (🏁 422 days ago) https://github.com/sourcegraph/sourcegraph/pull/14677 
-- [x] (🏁 421 days ago) https://github.com/sourcegraph/sourcegraph/pull/14695 
-- [x] (🏁 421 days ago) https://github.com/sourcegraph/sourcegraph/pull/14721 
-- [x] (🏁 421 days ago) https://github.com/sourcegraph/sourcegraph/pull/14722 
-- [x] (🏁 420 days ago) https://github.com/sourcegraph/sourcegraph/pull/14733 
-- [x] (🏁 405 days ago) https://github.com/sourcegraph/sourcegraph/pull/14679 
-- [x] (🏁 394 days ago) https://github.com/sourcegraph/sourcegraph/issues/13733    🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 385 days ago) https://github.com/sourcegraph/sourcegraph/issues/13891  __1.00d__
-- [x] (🏁 313 days ago) https://github.com/sourcegraph/sourcegraph/issues/13882  __4.50d__
+- [x] (🏁 463 days ago) https://github.com/sourcegraph/sourcegraph/issues/12930  🐛   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 462 days ago) https://github.com/sourcegraph/sourcegraph/issues/13957 (PRs: ~[#14005](https://github.com/sourcegraph/sourcegraph/pull/14005)~) __0.50d__   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 462 days ago) https://github.com/sourcegraph/sourcegraph/issues/14008    🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 462 days ago) https://github.com/sourcegraph/sourcegraph/pull/14035 :shipit:
+- [x] (🏁 461 days ago) https://github.com/sourcegraph/sourcegraph/pull/14060 :shipit:
+- [x] (🏁 460 days ago) https://github.com/sourcegraph/sourcegraph/issues/14044 (PRs: ~[#14061](https://github.com/sourcegraph/sourcegraph/pull/14061)~, ~[#14063](https://github.com/sourcegraph/sourcegraph/pull/14063)~)   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 460 days ago) https://github.com/sourcegraph/sourcegraph/pull/14124 :shipit:
+- [x] (🏁 453 days ago) https://github.com/sourcegraph/sourcegraph/issues/14052 (PRs: ~[#14141](https://github.com/sourcegraph/sourcegraph/pull/14141)~) 🐛   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 453 days ago) https://github.com/sourcegraph/sourcegraph/pull/14344 :shipit:
+- [x] (🏁 453 days ago) https://github.com/sourcegraph/sourcegraph/pull/14142 :shipit:
+- [x] (🏁 452 days ago) https://github.com/sourcegraph/sourcegraph/pull/14353 :shipit:
+- [x] (🏁 452 days ago) https://github.com/sourcegraph/sourcegraph/pull/14355 :shipit:
+- [x] (🏁 452 days ago) https://github.com/sourcegraph/sourcegraph/pull/14358 :shipit:
+- [x] (🏁 452 days ago) https://github.com/sourcegraph/sourcegraph/issues/14264    🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 448 days ago) https://github.com/sourcegraph/sourcegraph/pull/14428 :shipit:
+- [x] (🏁 447 days ago) https://github.com/sourcegraph/sourcegraph/issues/14467 (PRs: ~[#14469](https://github.com/sourcegraph/sourcegraph/pull/14469)~)   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 446 days ago) https://github.com/sourcegraph/sourcegraph/pull/14491 :shipit:
+- [x] (🏁 441 days ago) https://github.com/sourcegraph/sourcegraph/issues/14486 (PRs: ~[#14581](https://github.com/sourcegraph/sourcegraph/pull/14581)~)   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 441 days ago) https://github.com/sourcegraph/sourcegraph/pull/14648 :shipit:
+- [x] (🏁 441 days ago) https://github.com/sourcegraph/sourcegraph/pull/14633 :shipit:
+- [x] (🏁 441 days ago) https://github.com/sourcegraph/sourcegraph/pull/14637 :shipit:
+- [x] (🏁 441 days ago) https://github.com/sourcegraph/sourcegraph/pull/14624 :shipit:
+- [x] (🏁 440 days ago) https://github.com/sourcegraph/sourcegraph/pull/14677 :shipit:
+- [x] (🏁 440 days ago) https://github.com/sourcegraph/sourcegraph/pull/14695 :shipit:
+- [x] (🏁 440 days ago) https://github.com/sourcegraph/sourcegraph/pull/14721 :shipit:
+- [x] (🏁 440 days ago) https://github.com/sourcegraph/sourcegraph/pull/14722 :shipit:
+- [x] (🏁 439 days ago) https://github.com/sourcegraph/sourcegraph/pull/14733 :shipit:
+- [x] (🏁 424 days ago) https://github.com/sourcegraph/sourcegraph/pull/14679 :shipit:
+- [x] (🏁 412 days ago) https://github.com/sourcegraph/sourcegraph/issues/13733    🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 404 days ago) https://github.com/sourcegraph/sourcegraph/issues/13891  __1.00d__
+- [x] (🏁 332 days ago) https://github.com/sourcegraph/sourcegraph/issues/13882  __4.50d__
 <!-- END ASSIGNEE -->
 
 <!-- BEGIN ASSIGNEE: macraig -->
@@ -107,8 +107,8 @@ Completed: __6.00d__
 - [ ] ~https://github.com/sourcegraph/sourcegraph/issues/13015~    🏳️ [Backlog](https://github.com/sourcegraph/sourcegraph/milestone/5)
 
 Completed: __0.50d__
-- [x] (🏁 428 days ago) https://github.com/sourcegraph/sourcegraph/issues/14348    🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 419 days ago) https://github.com/sourcegraph/sourcegraph/issues/13200  __0.50d__ 🐛   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 447 days ago) https://github.com/sourcegraph/sourcegraph/issues/14348    🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 438 days ago) https://github.com/sourcegraph/sourcegraph/issues/13200  __0.50d__ 🐛   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
 <!-- END ASSIGNEE -->
 
 <!-- BEGIN ASSIGNEE: shrouxm -->
@@ -116,11 +116,11 @@ Completed: __0.50d__
 
 
 Completed: __5.00d__
-- [x] (🏁 434 days ago) https://github.com/sourcegraph/lsif-clang/issues/15    🏳️ [3.21](https://github.com/sourcegraph/lsif-clang/milestone/4)
-- [x] (🏁 434 days ago) https://github.com/sourcegraph/lsif-clang/issues/3  🐛   🏳️ [3.21](https://github.com/sourcegraph/lsif-clang/milestone/4)
-- [x] (🏁 416 days ago) https://github.com/sourcegraph/sourcegraph/issues/13202  __1.00d__ 🕵️   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
-- [x] (🏁 416 days ago) https://github.com/sourcegraph/lsif-clang/issues/13  🐛   🏳️ [3.21](https://github.com/sourcegraph/lsif-clang/milestone/4)
-- [x] (🏁 241 days ago) https://github.com/sourcegraph/sourcegraph/issues/12349  __4.00d__   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 453 days ago) https://github.com/sourcegraph/lsif-clang/issues/15    🏳️ [3.21](https://github.com/sourcegraph/lsif-clang/milestone/4)
+- [x] (🏁 453 days ago) https://github.com/sourcegraph/lsif-clang/issues/3  🐛   🏳️ [3.21](https://github.com/sourcegraph/lsif-clang/milestone/4)
+- [x] (🏁 435 days ago) https://github.com/sourcegraph/sourcegraph/issues/13202  __1.00d__ 🕵️   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
+- [x] (🏁 435 days ago) https://github.com/sourcegraph/lsif-clang/issues/13  🐛   🏳️ [3.21](https://github.com/sourcegraph/lsif-clang/milestone/4)
+- [x] (🏁 260 days ago) https://github.com/sourcegraph/sourcegraph/issues/12349  __4.00d__   🏳️ [3.21](https://github.com/sourcegraph/sourcegraph/milestone/46)
 <!-- END ASSIGNEE -->
 <!-- END WORK -->
 
